# youtube_monitor

./: pyproject.toml
src/youtube_monitor/: config.py  database.py  main.py  models.py  telegram.py  youtube_checker.py
src/youtube_monitor/scripts/: create_db.py
