[project]
name = "youtube-monitor"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Guerreiro",email = "rodrigopg8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "youtube_monitor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
